changed project name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Screen Cube</title>
+    <title>Bouncing Cube</title>
     <meta name="author" content="Matthew Hughes" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
